--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,19 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
-
+  flutter_dotenv: ^5.0.2
+  http: ^0.13.4
+  shared_preferences: ^2.0.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
-  intl: ^0.17.0
+  
   provider: ^6.0.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -67,5 +69,6 @@ flutter:
       - asset: assets/fonts/Anton-Regular.ttf
   assets:
     - assets/image/
+    - .env
 
 
