--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
       - asset: assets/fonts/Anton-Regular.ttf
   assets:
     - assets/image/
+    - assets/image/logo-travel.png
     - .env
 
 
